Load extension icons for more scale factors.

The "supported" scale factors are just the ones that we load raster
assets for (in ResourceBundle). This patch additionally looks for
icons in scale factors that correlate with the currently attached
displays.

Practically speaking, this means a machine that's running at 1.5x such
as a Surface Pro will have better looking extension icons in the
renderer context menu.

BUG=596757

Review-Url: https://codereview.chromium.org/2609853003
Cr-Commit-Position: refs/heads/master@{#444128}

Former-commit-id: 47ce132c79896db4fe4832a96b097adc643e6e99